@@ -1,3 +1,7 @@
+2025-06-04  Sergey Fedorov  <barracuda@macos-powerpc.org>
+
+	* src/digest.c: Fix endianness handling
+
 2025-06-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
